--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 <script src="job.js?v=jul1"></script>
 <script src="tracks.js?v=jul1"></script>
 <script src="bootstrap.js?v=jul1"></script>
+<script src="predicateui.js"></script>
 
 </head>
 <body>
@@ -25,6 +26,8 @@
 <div id="container">
 
 </div>
+
+<div id="newpredicatedialog"></div>
 
 </body>
 </html>
