we can make predicate annotations and save them to db

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 <script src="tracks.js?v=jul1"></script>
 <script src="bootstrap.js?v=jul1"></script>
 <script src="predicateui.js"></script>
+<script src="json2.js"></script>
 
 </head>
 <body>
