started the sentences ui

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 <script src="bootstrap.js?v=jul1"></script>
 <script src="predicateui.js"></script>
 <script src="json2.js"></script>
+<script src="sentenceui.js"></script>
 
 </head>
 <body>
@@ -30,6 +31,7 @@
 
 <div id="newpredicatedialog"></div>
 <div id="newroledialog"></div>
+<div id="newsentencedialog"></div>
 
 </body>
 </html>
