--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,10 @@
 
 <div id="newpredicatedialog"></div>
 <div id="newroledialog"></div>
-<div id="newsentencedialog"></div>
+<div id="newsentencedialog" style="display:none">
+    <label for="sentence_input">write a sentence:</label>
+    <input type="text" name="sentence_input" id="sentence_input" />
+</div>
 
 </body>
 </html>
