made sentence textfield bigger

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,10 @@
 <div id="newroledialog"></div>
 <div id="newsentencedialog" style="display:none">
     <label for="sentence_input">sentence:</label>
-    <input type="text" name="sentence_input" id="sentence_input" />
+    <input type="text"
+           name="sentence_input"
+           id="sentence_input"
+           style="width:100%" />
 </div>
 
 </body>
