started ui modifications for group support

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 <script src="job.js?v=jul1"></script>
 <script src="tracks.js?v=jul1"></script>
 <script src="bootstrap.js?v=jul1"></script>
+<script src="groupui.js"></script>
 <script src="predicateui.js"></script>
 <script src="json2.js"></script>
 <script src="sentenceui.js"></script>
@@ -29,6 +30,8 @@
 
 </div>
 
+<div id="newgroupdialog"></div>
+<div id="newmembershipdialog"></div>
 <div id="newpredicatedialog"></div>
 <div id="newroledialog"></div>
 <div id="newsentencedialog" style="display:none">
